# af_rules_ruby

./: .gitignore
examples/testproject_app/: .dockerignore  .npmrc  BUILD.bazel  Dockerfile  Gemfile  Rakefile  WORKSPACE  deployment.yml  package.json  secrets_manifest.yml
examples/testproject_app/app/views/layouts/: application.html.erb
examples/testproject_app/config/: application.rb  credentials.yml.enc  database.yml
examples/testproject_app/config/environments/: production.rb  test.rb
examples/testproject_app/config/initializers/: af_exception_initializer.rb  af_migration_sensitivity_extensions.rb  secret_key_base.rb
examples/testproject_app/config/settings/: base.yml  development.yml  production.yml  production_production.yml  production_qa.yml  test.yml
examples/testproject_app/lib/tasks/: webpacker.rake
ruby/: defs.bzl
